# playground

./: .dvcignore  .gitattributes.txt  README.md  image.dvc  indexedDB.md  integration_testing.txt  package-lock.json
.dvc/: config
D_Work/: Hello.cpp
D_Work/Object_Color/: Main.cpp  color_data.hpp  data.txt  out
D_Work/Object_Color_Detection/: CMakeLists.txt
D_Work/bounding_box_Color/: source.cpp
D_Work/final_color_detection/: Source.cpp  color_data.hpp  data.txt  out  output.txt
S_indexDb/imageDnD/: package-lock.json  package.json
S_indexDb/imageDnD/src/: PanelExample.js  TestSix.js  indexedDB.md
S_typeScript/: app.js  app.ts  index.html  package-lock.json  todo.js  todo.ts  tsNotes.md
S_typeScript/employeeform/: package-lock.json  package.json
S_typeScript/employeeform/public/: index.html
S_typeScript/employeeform/src/: App.css  App.tsx  Card.tsx
S_typeScript/my-app/src/: App.tsx
S_typeScript/shoppingcart/: package-lock.json  package.json
S_typeScript/shoppingcart/public/: index.html
S_typeScript/shoppingcart/src/: AddedItemCart.tsx  App.tsx  Cart.jsx  Spinner.tsx
data/classification/: images.dvc  labels.dvc
data/detection/: images.dvc
dataset/detection/: image.dvc  images.dvc  labels.dvc  lables.dvc
datasets/Darshan_Image/images/: download.jfif
datasets/classification/: images.dvc  labels.dvc
datasets/detection/: .gitignore  images.dvc  labels.dvc  labels1.dvc
datasets/detection/dataset1/: labels.dvc
datasets/detection/test3/labels/: 908650.txt  908657.txt  908662.txt
